--- a/exercicios/ex023/style.css
+++ b/exercicios/ex023/style.css
@@ -5,8 +5,23 @@ body {
 }
 
 table {
-    width: 500px;
+    width: 460px;
     border-collapse: collapse;
+    position: relative;
+}
+
+caption {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    background-color: lightseagreen;
+    color: white;
+}
+
+thead > tr > th {
+    position: sticky;
+    top: -1px;
+    background-color: rgb(5, 100, 95);
 }
 
 td, th {
@@ -17,6 +32,14 @@ td, th {
 thead, tfoot {
     background-color: rgb(5, 100, 95);
     color: white;
+}
+
+tbody > tr:nth-child(even) { /* 2n (par)*/
+    background-color: lightseagreen;
+}
+
+tbody > tr:nth-child(odd) { /* 2n-1 (impar)*/ 
+    background-color: lightgrey;
 }
 
 .num {
